MSDK plugin fails to build with libva 2.4.0
Just tried to build the plugin today with latest libva 2.4.0 (api 1.4.0) and it failed with the following.
msdk_libva.c:52:25: error: ‘VA_FOURCC_A2R10G10B10’ undeclared here (not in a function)
{ MFX_FOURCC_##MFX, VA_FOURCC_##VA }
^
msdk_libva.c:69:3: note: in expansion of macro ‘FOURCC_MFX_TO_VA’
FOURCC_MFX_TO_VA (A2RGB10, A2R10G10B10),
^
Makefile:1197: recipe for target 'libgstmsdk_la-msdk_libva.lo' failed
make[5]: *** [libgstmsdk_la-msdk_libva.lo] Error 1
make[5]: *** Waiting for unfinished jobs....
gstmsdkallocator_libva.c: In function ‘gst_msdk_frame_alloc’:
gstmsdkallocator_libva.c:101:55: error: ‘VA_FOURCC_A2R10G10B10’ undeclared (first use in this function)
if (format == VA_RT_FORMAT_YUV444 && va_fourcc == VA_FOURCC_A2R10G10B10)
^
gstmsdkallocator_libva.c:101:55: note: each undeclared identifier is reported only once for each function it appears in
gstmsdkallocator_libva.c: In function ‘gst_msdk_frame_lock’:
gstmsdkallocator_libva.c:334:12: error: ‘VA_FOURCC_A2R10G10B10’ undeclared (first use in this function)
case VA_FOURCC_A2R10G10B10:
^
gstmsdkallocator_libva.c: In function ‘gst_msdk_export_dmabuf_to_vasurface’:
gstmsdkallocator_libva.c:489:19: error: ‘VA_FOURCC_A2R10G10B10’ undeclared (first use in this function)
va_fourcc = VA_FOURCC_A2R10G10B10;
^
It seems it might be missing some libva guard because VA_FOURCC_A2R10G10B10 is introduced in api 1.5.0 so far I understand.