msdk: fix the build error with libva 2.4.0

This fixes https://gitlab.freedesktop.org/gstreamer/gst-plugins-bad/issues/949